# Micromouse

./: README.md  c1.c
IR code/: c1.c  cmakelist.txt
IR_+_MotorDriver/: CMakeLists.txt  sdkconfig
IR_+_MotorDriver/components/: CMakeLists.txt
IR_+_MotorDriver/main/: main.c
assets/: Left Wall Following.mov  flood fill simulation.mov
cad_design/: Four Motor Design.step
cad_design/2_motor_assembly/: Assembly 3 - 1020 Coreless Motor v3 v2 (1).step  Assembly 3 - 1020 Coreless Motor v3 v2.step  Assembly 3 - 3x4x2mm_tact_button.step  Assembly 3 - CP_Elec_63x77.step  Assembly 3 - CP_Elec_8x105.step  Assembly 3 - CQ assembly (1).step  Assembly 3 - CQ assembly (2).step  Assembly 3 - CQ assembly (3).step  Assembly 3 - CQ assembly (4).step  Assembly 3 - CQ assembly (5).step  Assembly 3 - CQ assembly (6).step  Assembly 3 - CQ assembly.step  Assembly 3 - C_0603_1608Metric.step  Assembly 3 - C_0603_1608Metric_1.step  Assembly 3 - C_0603_1608Metric_2.step  Assembly 3 - D_SMA.step  Assembly 3 - D_SMB.step  (+79 more)
documentation/: Project Report - Micromouse.md  README.md
firmware/: readme.md
firmware/tof_sensor/components/: CMakeLists.txt  README.md  vl53l0x.c
firmware/tof_sensor/components/Api/platform/inc/: vl53l0x_platform.h  vl53l0x_platform_log.h
firmware/tof_sensor/components/Api/platform/src/: vl53l0x_i2c_platform.c  vl53l0x_platform.c  vl53l0x_platform_log.c
firmware/tof_sensor/components/include/: vl53l0x.h
pcb_design/: Micromouse.kicad_pcb  Micromouse.kicad_prl  Micromouse.kicad_pro  Micromouse.kicad_sch
pcb_design_/: Micromouse.kicad_prl  Micromouse.kicad_sch
(+45 files in other folders)
